# Neuroalign

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  finetune_somatomotor.yaml  finetune_tuab.yaml  finetune_tuev.yaml  finetune_tusz.yaml  mtm_pretrain.yaml  report_align.yaml  smoke.yaml  tokenizer.yaml
configs/ablations/: joint_attention.yaml  no_cross_attention.yaml  no_freq_pcc.yaml  no_orthogonality.yaml  no_rope.yaml  no_rvq.yaml  no_sensor_encoder.yaml  one_to_one_contrastive.yaml  signal_only_no_text.yaml
docs/: DATASETS.md  MODEL_CARD.md  REPRODUCIBILITY.md  RESULTS_TABLES.md
neuroalign_emeg/: __init__.py  engine.py  losses.py  metrics.py  utils.py
neuroalign_emeg/models/: __init__.py  cross_attention.py  heads.py  neuroalign.py  rope.py  rvq.py  sensor_encoder.py  temporal_encoder.py  text_encoder.py  tokenizer.py  transformer.py
scripts/: _common.py  evaluate.py  finetune.py  make_synthetic_manifest.py  pretrain_mtm.py  run_ablation.py  train_report_alignment.py  train_tokenizer.py
tests/: test_losses_metrics.py  test_smoke.py
tools/: export_checkpoint.py  prepare_openneuro_somatomotor.py  prepare_tuh_eeg.py
