[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroalign-emeg"
version = "0.1.0"
description = "Sensor-aware EEG-MEG foundation learning with clinical report alignment."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "NeuroAlign-EMEG Authors"}
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "tqdm>=4.66"
]

[tool.setuptools.packages.find]
include = ["neuroalign_emeg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
